# minifaucet

./: Cargo.toml  README.md  generate_passphrases.py
src/: main.rs
