[package]
name = "minifaucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bitcoincore-rpc = "0.16.0"
bitcoin = "0.29.2"
rand = "0.8.5"
ldk-node = "0.2.0"


lightning = { version = "0.0.118", features = ["max_level_trace", "std"] }
lightning-invoice = { version = "0.26" }
